[tool.poetry]
name = "nkscraper"
version = "0.1.0"
description = "A Python Package for Scraping Netkeiba."
authors = ["funadaya13 <funadaya13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
bs4 = "^0.0.1"
aiohttp = "^3.8.6"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pycodestyle = "^2.11.1"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinx-multiversion = "^0.2.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
